--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "cafe": "file:",
     "next": "14.2.13",
     "react": "^18",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18"
   },
   "devDependencies": {
