--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.2.13",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
