--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -15,7 +16,7 @@
     "@heroicons/react": "^1.0.6",
     "bootstrap": "^5.3.3",
     "cafe": "file:",
-    "next": "14.2.13",
+    "next": "^14.2.13",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
